--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -3,6 +3,6 @@ project(App)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(App src/main.cpp src/App.cpp)
+add_executable(${PROJECT_NAME} src/main.cpp src/App.cpp)
 target_include_directories(${PROJECT_NAME} PRIVATE include)
-target_link_libraries(App PRIVATE RayApp)
+target_link_libraries(${PROJECT_NAME} PRIVATE RayApp)
