--- a/RayApp/CMakeLists.txt
+++ b/RayApp/CMakeLists.txt
@@ -9,15 +9,15 @@ include(FetchContent)
 set(RAYLIB_VERSION 5.0)
 find_package(raylib ${RAYLIB_VERSION} QUIET) # QUIET or REQUIRED
 if(NOT raylib_FOUND) # If there's none, fetch and build raylib
-  fetchcontent_declare(
+  FetchContent_Declare(
     raylib
     DOWNLOAD_EXTRACT_TIMESTAMP OFF
     URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERSION}.tar.gz
   )
-  fetchcontent_getproperties(raylib)
+  FetchContent_GetProperties(raylib)
   if(NOT raylib_POPULATED) # Have we downloaded raylib yet?
     set(FETCHCONTENT_QUIET NO)
-    fetchcontent_populate(raylib)
+    FetchContent_Populate(raylib)
     # don't build the supplied examples
     set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
     add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
