--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.27)
 project(App)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
 add_executable(${PROJECT_NAME} src/main.cpp src/App.cpp)
 target_include_directories(${PROJECT_NAME} PRIVATE include)
