--- a/RayApp/CMakeLists.txt
+++ b/RayApp/CMakeLists.txt
@@ -1,18 +1,21 @@
+# lint_cmake: -readability/wonkycase
 cmake_minimum_required(VERSION 3.27)
 project(RayApp)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
 # ================= Dependencies =================
 include(FetchContent)
 
 set(RAYLIB_VERSION 5.0)
+set(RAYLIB_BASE_URL https://github.com/raysan5/raylib/archive/refs/tags)
 find_package(raylib ${RAYLIB_VERSION} QUIET) # QUIET or REQUIRED
 if(NOT raylib_FOUND) # If there's none, fetch and build raylib
   FetchContent_Declare(
     raylib
     DOWNLOAD_EXTRACT_TIMESTAMP OFF
-    URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERSION}.tar.gz
+    URL ${RAYLIB_BASE_URL}/${RAYLIB_VERSION}.tar.gz
   )
   FetchContent_GetProperties(raylib)
   if(NOT raylib_POPULATED) # Have we downloaded raylib yet?
