improved cmake config

--- a/RayApp/CMakeLists.txt
+++ b/RayApp/CMakeLists.txt
@@ -2,32 +2,31 @@
 cmake_minimum_required(VERSION 3.27)
 project(RayApp)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
-
-# ================= Dependencies =================
-include(FetchContent)
-
 set(RAYLIB_VERSION 5.0)
 set(RAYLIB_BASE_URL https://github.com/raysan5/raylib/archive/refs/tags)
-find_package(raylib ${RAYLIB_VERSION} QUIET) # QUIET or REQUIRED
-if(NOT raylib_FOUND) # If there's none, fetch and build raylib
+find_package(raylib ${RAYLIB_VERSION} QUIET)
+if(NOT raylib_FOUND)
   FetchContent_Declare(
     raylib
     DOWNLOAD_EXTRACT_TIMESTAMP OFF
     URL ${RAYLIB_BASE_URL}/${RAYLIB_VERSION}.tar.gz
   )
   FetchContent_GetProperties(raylib)
-  if(NOT raylib_POPULATED) # Have we downloaded raylib yet?
+  if(NOT raylib_POPULATED)
     set(FETCHCONTENT_QUIET NO)
     FetchContent_Populate(raylib)
-    # don't build the supplied examples
     set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
     add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
   endif()
 endif()
 
-# ================= Other stuff =================
 add_library(${PROJECT_NAME} src/RayApp.cpp)
+
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 target_link_libraries(${PROJECT_NAME} PUBLIC raylib)
+
+# Apply common target properties
+set_common_target_properties(${PROJECT_NAME})
+
+message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
+message(STATUS "Raylib version: ${RAYLIB_VERSION}")
