--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -1,9 +1,13 @@
 cmake_minimum_required(VERSION 3.27)
 project(App)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
-
 add_executable(${PROJECT_NAME} src/main.cpp src/App.cpp)
+
 target_include_directories(${PROJECT_NAME} PRIVATE include)
 target_link_libraries(${PROJECT_NAME} PRIVATE RayApp)
+
+# Apply common target properties
+set_common_target_properties(${PROJECT_NAME})
+
+message(STATUS "Project: ${PROJECT_NAME}")
+message(STATUS "C++ Standard: ${CMAKE_CXX_STANDARD}")
