update cmake file

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -1,13 +1,13 @@
-cmake_minimum_required(VERSION 3.27)
-project(App)
+cmake_minimum_required(VERSION 3.28)
+set(NAME "App")
 
-add_executable(${PROJECT_NAME} src/main.cpp src/App.cpp)
+add_executable(${NAME} src/main.cpp src/App.cpp)
 
-target_include_directories(${PROJECT_NAME} PRIVATE include)
-target_link_libraries(${PROJECT_NAME} PRIVATE RayApp)
+target_include_directories(${NAME} PRIVATE include)
+target_link_libraries(${NAME} PRIVATE RayApp)
 
 # Apply common target properties
-set_common_target_properties(${PROJECT_NAME})
+set_common_target_properties(${NAME})
 
-message(STATUS "Project: ${PROJECT_NAME}")
+message(STATUS "Project: ${NAME}")
 message(STATUS "C++ Standard: ${CMAKE_CXX_STANDARD}")
