--- a/RayApp/CMakeLists.txt
+++ b/RayApp/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.28)
 set(NAME "RayApp")
 
-set(RAYLIB_VERSION 5.0)
+set(RAYLIB_VERSION 5.5)
 set(RAYLIB_BASE_URL https://github.com/raysan5/raylib/archive/refs/tags)
 find_package(raylib ${RAYLIB_VERSION} QUIET)
 if(NOT raylib_FOUND)
@@ -14,8 +14,12 @@ if(NOT raylib_FOUND)
   FetchContent_GetProperties(raylib)
   if(NOT raylib_POPULATED)
     set(FETCHCONTENT_QUIET NO)
-    FetchContent_Populate(raylib)
     set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_X11 OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_WAYLAND ON CACHE BOOL "" FORCE)
+    unset(GLFW_USE_WAYLAND)
+
+    FetchContent_Populate(raylib)
     add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
   endif()
 endif()
